add minor changes

--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -180,7 +180,7 @@ textarea:focus {
 .agreement__policy {
   color: var(--accent-color);
 }
-.form-submit-btn {
+.form__submit-btn {
   font-weight: 700;
   font-size: 16px;
   line-height: 30px;
