--- a/css/main.css
+++ b/css/main.css
@@ -227,7 +227,7 @@ textarea:focus {
   color: var(--accent-color);
 }
 
-.form-submit-btn {
+.form__submit-btn {
   font-weight: 700;
   font-size: 16px;
   line-height: 30px;
