--- a/css/main.css
+++ b/css/main.css
@@ -45,20 +45,15 @@ body {
   letter-spacing: 0.02em;
   color: var(--main-font-color);
 }
+.header-list__link:hover, .header-list__link:focus {
+  color: var(--accent-color);
+}
 
 .header-list__link.header-list__link--active::after {
   background-color: var(--accent-color);
 }
 
 .header-list__link--active {
-  color: var(--accent-color);
-}
-
-.header-list__link:hover {
-  color: var(--accent-color);
-}
-
-.header-list__link:focus {
   color: var(--accent-color);
 }
 
@@ -70,20 +65,10 @@ body {
   letter-spacing: 0.02em;
   color: var(--contacts-color);
 }
-
-.contact-list__mail:hover,
-.contact-list__tel:hover {
-  color: var(--accent-color);
-}
-
-.contact-list__mail:focus,
+.contact-list__mail:hover, .contact-list__mail:focus,
+.contact-list__tel:hover,
 .contact-list__tel:focus {
   color: var(--accent-color);
-}
-
-.contacts-icon:hover .contacts-icon,
-.contacts-icon:focus .contacts-icon {
-  fill: var(--accent-color);
 }
 
 .contact-list__icon {
@@ -114,12 +99,10 @@ body {
   color: var(--btn-accent-color);
   background: var(--accent-color);
 }
-
 .hero__btn:hover {
   color: var(--main-font-color);
   background-color: var(--accent-color);
 }
-
 .hero__btn:focus {
   color: var(--main-font-color);
 }
@@ -131,6 +114,9 @@ body {
 .form__icon {
   fill: currentColor;
 }
+.form__icon:hover, .form__icon:focus {
+  color: var(--accent-color);
+}
 
 .form__input:focus + .form__icon,
 .form__input:hover + .form__icon {
@@ -138,16 +124,6 @@ body {
 }
 
 .form__input:focus {
-  border: 1px solid var(--accent-color);
-}
-
-.form__icon:hover,
-.form__icon:focus {
-  color: var(--accent-color);
-}
-
-.form__field input:hover,
-.form__field input:focus {
   border: 1px solid var(--accent-color);
 }
 
@@ -178,6 +154,9 @@ body {
 .form__field input {
   border: 1px solid rgba(33, 33, 33, 0.2);
 }
+.form__field input:hover, .form__field input:focus {
+  border: 1px solid var(--accent-color);
+}
 
 .form__name {
   font-weight: 400;
@@ -196,13 +175,7 @@ textarea {
   border: 1px solid rgba(33, 33, 33, 0.2);
   fill: currentColor;
 }
-
-textarea:hover,
-textarea:focus {
-  border: 1px solid var(--accent-color);
-}
-
-textarea:focus {
+textarea:hover, textarea:focus {
   border: 1px solid var(--accent-color);
 }
 
@@ -236,12 +209,10 @@ textarea:focus {
   color: var(--btn-accent-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
-
 .form__submit-btn:hover {
   color: var(--main-font-color);
   background-color: #188ce8;
 }
-
 .form__submit-btn:focus {
   color: var(--main-font-color);
 }
@@ -256,8 +227,7 @@ textarea:focus {
   background-color: var(--header-main-color);
 }
 
-.close-btn:hover .close-btn__icon,
-.close-btn:focus .close-btn__icon {
+.close-btn:hover .close-btn__icon, .close-btn:focus .close-btn__icon {
   fill: var(--accent-color);
 }
 
@@ -330,15 +300,13 @@ textarea:focus {
   background-color: var(--header-main-color);
   color: var(--main-sprite-color);
 }
+.soc-list__link:hover, .soc-list__link:focus {
+  background-color: var(--accent-color);
+  color: var(--btn-accent-color);
+}
 
 .soc-list__icon {
   fill: currentColor;
-}
-
-.soc-list__link:hover,
-.soc-list__link:focus {
-  background-color: var(--accent-color);
-  color: var(--btn-accent-color);
 }
 
 .team__employee {
@@ -375,15 +343,13 @@ textarea:focus {
   background-color: var(--header-main-color);
   color: var(--main-sprite-color);
 }
+.clients__link:hover, .clients__link:focus {
+  color: var(--accent-color);
+  border: 1px solid var(--accent-color);
+}
 
 .clients__icon {
   fill: currentColor;
-}
-
-.clients__link:hover,
-.clients__link:focus {
-  color: var(--accent-color);
-  border: 1px solid var(--accent-color);
 }
 
 .logo__footer {
@@ -414,8 +380,8 @@ footer {
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
 }
-
-.contacts__mail:focus,
+.contacts__mail:hover, .contacts__mail:focus,
+.contacts__tel:hover,
 .contacts__tel:focus {
   color: var(--accent-color);
 }
@@ -431,15 +397,13 @@ footer {
   background-color: rgba(255, 255, 255, 0.1);
   color: var(--btn-accent-color);
 }
+.join__link:hover, .join__link:focus {
+  background-color: var(--accent-color);
+  color: var(--btn-accent-color);
+}
 
 .join__icon {
   fill: currentColor;
-}
-
-.join__link:hover,
-.join__link:focus {
-  background-color: var(--accent-color);
-  color: var(--btn-accent-color);
 }
 
 .subs-mail__tittle {
@@ -488,42 +452,55 @@ footer {
   color: var(--btn-accent-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
-
-.subs-mail__btn:hover,
-.subs-mail__btn:hover .send-icon {
-  color: var(--main-font-color);
-  background-color: var(--accent-color);
-}
-
-.subs-mail__btn:focus,
-.subs-mail__btn:focus .send-icon {
+.subs-mail__btn:hover, .subs-mail__btn:focus {
   color: var(--main-font-color);
 }
 
 .subs-mail__icon {
   fill: currentColor;
 }
+.subs-mail__btn:hover .subs-mail__icon {
+  color: var(--main-font-color);
+  background-color: var(--accent-color);
+}
+.subs-mail__btn:focus .subs-mail__icon {
+  color: var(--main-font-color);
+}
 
-.main-section {
+.portfolio {
   background-color: var(--header-main-color);
 }
 
-.work-projects {
+.filter-list__btn {
+  background-color: var(--team-backgrd-color);
+  font-family: inherit;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.62;
+  letter-spacing: 0.03em;
+  color: #212121;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition-property: background-color, color;
+}
+.filter-list__btn:hover, .filter-list__btn:focus {
+  color: var(--btn-accent-color);
+  background-color: var(--accent-color);
+}
+
+.portfolio-list__projects {
   border-left: 1px solid var(--portfolio-border);
   border-right: 1px solid var(--portfolio-border);
   border-bottom: 1px solid var(--portfolio-border);
 }
 
-.portfolio-item {
+.portfolio-list__item {
   background-color: var(--header-main-color);
 }
-
-.portfolio-item:hover,
-.portfolio-item:focus {
+.portfolio-list__item:hover, .portfolio-list__item:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
-.portfolio-meta {
+.portfolio-list__meta {
   font-weight: 400;
   font-size: 18px;
   line-height: 1.6;
@@ -531,17 +508,17 @@ footer {
   color: var(--btn-accent-color);
 }
 
-.portfolio-overlay {
+.portfolio-list__overlay {
   background-color: rgba(33, 150, 243, 0.9);
 }
 
-.work-projects {
+.portfolio-list__projects {
   border-left: 1px solid var(--portfolio-border);
   border-right: 1px solid var(--portfolio-border);
   border-bottom: 1px solid var(--portfolio-border);
 }
 
-.project {
+.portfolio-list__name {
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
@@ -549,7 +526,7 @@ footer {
   color: var(--main-font-color);
 }
 
-.worktitle {
+.portfolio-list__worktitle {
   font-weight: 400;
   font-size: 16px;
   line-height: 1.88;
@@ -906,7 +883,6 @@ img {
   position: relative;
   margin-right: 30px;
 }
-
 .mission__item:nth-child(3n) {
   margin-right: 0;
 }
@@ -945,7 +921,6 @@ img {
   width: 270px;
   margin-right: 30px;
 }
-
 .benefits__item:last-child {
   margin-right: 0;
 }
@@ -995,7 +970,6 @@ img {
   margin-right: 30px;
   border-radius: 0px 0px 4px 4px;
 }
-
 .team__item:nth-child(4n) {
   margin-right: 0;
 }
@@ -1123,6 +1097,7 @@ footer {
 }
 
 .subs-mail__btn {
+  position: relative;
   border: none;
   padding: 10px 62px 10px 28px;
   border-radius: 4px;
@@ -1146,28 +1121,16 @@ footer {
   gap: 8px;
 }
 
-.filter-btn {
+.filter-list__btn {
   padding: 6px 22px;
-  background-color: var(--team-backgrd-color);
   border-radius: 4px;
-  border: solid transparent;
-  font-family: inherit;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.62;
   text-align: center;
-  letter-spacing: 0.03em;
-  color: #212121;
+  border: solid transparent;
   cursor: pointer;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition-property: background-color, color;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.filter-btn:hover, .filter-btn:focus {
-  color: var(--btn-accent-color);
-  background-color: var(--accent-color);
+.filter-list__btn:hover, .filter-list__btn:focus {
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
@@ -1185,7 +1148,7 @@ footer {
   margin: -1px;
 }
 
-.list-nav {
+.portfolio--size {
   padding-top: 94px;
   padding-bottom: 94px;
 }
@@ -1195,36 +1158,34 @@ footer {
   flex-wrap: wrap;
 }
 
-.work-projects {
+.portfolio-list__projects {
   padding-top: 20px;
   padding-bottom: 20px;
   padding-left: 24px;
   padding-right: 24px;
 }
 
-.portfolio-item {
+.portfolio-list__item {
   margin-right: 30px;
   margin-bottom: 30px;
 }
-
-.portfolio-item:nth-child(3n) {
+.portfolio-list__item:nth-child(3n) {
   margin-right: 0;
 }
-
-.portfolio-item:nth-last-child(-n+3) {
+.portfolio-list__item:nth-last-child(-n+3) {
   margin-bottom: 0;
 }
 
-.portfolio-link {
+.portfolio-list__link {
   display: block;
 }
 
-.portfolio-thumb {
+.portfolio-list__thumb {
   position: relative;
   overflow: hidden;
 }
 
-.portfolio-meta {
+.portfolio-list__meta {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -1233,12 +1194,11 @@ footer {
   height: 168px;
   transform: translate(-50%, -50%);
 }
-
-.portfolio-item:hover .portfolio-meta {
+.portfolio-list__item:hover .portfolio-list__meta {
   opacity: 1;
 }
 
-.portfolio-overlay {
+.portfolio-list__overlay {
   position: absolute;
   top: 0;
   left: 0;
@@ -1249,13 +1209,12 @@ footer {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.portfolio-item:hover .portfolio-overlay,
-.portfolio-item:focus .portfolio-overlay {
+.portfolio-list__item:hover .portfolio-list__overlay, .portfolio-list__item:focus .portfolio-list__overlay {
   opacity: 1;
   transform: translateY(0);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.project {
+.portfolio-list__name {
   margin-bottom: 4px;
 }/*# sourceMappingURL=main.css.map */
