--- a/sass/components/_page-footer.scss
+++ b/sass/components/_page-footer.scss
@@ -54,6 +54,7 @@ padding-bottom: 15px;
 border-radius: 4px;
 }
 .subs-mail__btn {
+position: relative;
 border: none;
 padding: 10px 62px 10px 28px;
 border-radius: 4px;
