--- a/sass/components/_portfolio_list.scss
+++ b/sass/components/_portfolio_list.scss
@@ -10,7 +10,7 @@
   clip-path: inset(50%);
   margin: -1px;
 }
-.list-nav {
+.portfolio--size {
   padding-top: 94px;
   padding-bottom: 94px;
 }
@@ -18,30 +18,30 @@
   display: flex;
   flex-wrap: wrap;
 }
-.work-projects {
+.portfolio-list__projects {
   padding-top: 20px;
   padding-bottom: 20px;
   padding-left: 24px;
   padding-right: 24px;
 }
-.portfolio-item {
+.portfolio-list__item {
   margin-right: 30px;
   margin-bottom: 30px;
+  &:nth-child(3n) {
+    margin-right: 0;
+  }
+  &:nth-last-child(-n + 3) {
+    margin-bottom: 0;
+  }
 }
-.portfolio-item:nth-child(3n) {
-  margin-right: 0;
-}
-.portfolio-item:nth-last-child(-n + 3) {
-  margin-bottom: 0;
-}
-.portfolio-link {
+.portfolio-list__link {
   display: block;
 }
-.portfolio-thumb {
+.portfolio-list__thumb {
   position: relative;
   overflow: hidden;
 }
-.portfolio-meta {
+.portfolio-list__meta {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -50,11 +50,11 @@
   height: 168px;
 
   transform: translate(-50%, -50%);
+    .portfolio-list__item:hover & {
+    opacity: 1;
+  }
 }
-.portfolio-item:hover .portfolio-meta {
-  opacity: 1;
-}
-.portfolio-overlay {
+.portfolio-list__overlay {
   position: absolute;
   top: 0;
   left: 0;
@@ -66,12 +66,14 @@
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
     opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.portfolio-item:hover .portfolio-overlay,
-.portfolio-item:focus .portfolio-overlay {
-  opacity: 1;
-  transform: translateY(0);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+.portfolio-list__overlay {
+  .portfolio-list__item:hover &, 
+  .portfolio-list__item:focus & {
+    opacity: 1;
+    transform: translateY(0);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
 }
-.project {
+.portfolio-list__name {
   margin-bottom: 4px;
 }
