--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -31,14 +31,19 @@ body {
   color: var(--accent-color);
 }
 .logo__header {
-    color: var(--main-font-color);
-  }
+  color: var(--main-font-color);
+}
 .header-list__link {
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: var(--main-font-color);
+
+  &:hover,
+  &:focus {
+    color: var(--accent-color);
+  }
 }
 .header-list__link.header-list__link--active::after {
   background-color: var(--accent-color);
@@ -46,13 +51,6 @@ body {
 .header-list__link--active {
   color: var(--accent-color);
 }
-.header-list__link:hover {
-  color: var(--accent-color);
-}
-.header-list__link:focus {
-  color: var(--accent-color);
-}
-
 .contact-list__mail,
 .contact-list__tel {
   font-weight: 500;
@@ -60,18 +58,11 @@ body {
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: var(--contacts-color);
-}
-.contact-list__mail:hover,
-.contact-list__tel:hover {
-  color: var(--accent-color);
-}
-.contact-list__mail:focus,
-.contact-list__tel:focus {
-  color: var(--accent-color);
-}
-.contacts-icon:hover .contacts-icon,
-.contacts-icon:focus .contacts-icon {
-  fill: var(--accent-color);
+
+  &:hover,
+  &:focus {
+    color: var(--accent-color);
+  }
 }
 .contact-list__icon {
   fill: currentColor;
@@ -101,33 +92,31 @@ body {
   letter-spacing: 0.06em;
   color: var(--btn-accent-color);
   background: var(--accent-color);
-}
-.hero__btn:hover {
-  color: var(--main-font-color);
-  background-color: var(--accent-color);
-}
-.hero__btn:focus {
-  color: var(--main-font-color);
+
+  &:hover {
+    color: var(--main-font-color);
+    background-color: var(--accent-color);
+  }
+  &:focus {
+    color: var(--main-font-color);
+  }
 }
 .backdrop {
   background-color: rgba(0, 0, 0, 0.2);
 }
 .form__icon {
   fill: currentColor;
+
+  &:hover,
+  &:focus {
+    color: var(--accent-color);
+  }
 }
 .form__input:focus + .form__icon,
 .form__input:hover + .form__icon {
   color: var(--accent-color);
 }
 .form__input:focus {
-  border: 1px solid var(--accent-color);
-}
-.form__icon:hover,
-.form__icon:focus {
-  color: var(--accent-color);
-}
-.form__field input:hover,
-.form__field input:focus {
   border: 1px solid var(--accent-color);
 }
 .form__field input::placeholder {
@@ -139,6 +128,11 @@ body {
 }
 .form__field input {
   border: 1px solid rgba(33, 33, 33, 0.2);
+
+  &:hover,
+  &:focus {
+    border: 1px solid var(--accent-color);
+  }
 }
 .form__name {
   font-weight: 400;
@@ -155,13 +149,11 @@ textarea {
   color: rgba(117, 117, 117, 0.5);
   border: 1px solid rgba(33, 33, 33, 0.2);
   fill: currentColor;
-}
-textarea:hover,
-textarea:focus {
-  border: 1px solid var(--accent-color);
-}
-textarea:focus {
-  border: 1px solid var(--accent-color);
+
+  &:hover,
+  &:focus {
+    border: 1px solid var(--accent-color);
+  }
 }
 .agreement__icon {
   border: 2px solid #212121;
@@ -188,13 +180,14 @@ textarea:focus {
   background-color: #188ce8;
   color: var(--btn-accent-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-}
-.form__submit-btn:hover {
-  color: var(--main-font-color);
-  background-color: #188ce8;
-}
-.form__submit-btn:focus {
-  color: var(--main-font-color);
+
+  &:hover {
+    color: var(--main-font-color);
+    background-color: #188ce8;
+  }
+  &:focus {
+    color: var(--main-font-color);
+  }
 }
 .modal {
   background-color: var(--header-main-color);
@@ -205,9 +198,11 @@ textarea:focus {
   border: 1px solid rgba(0, 0, 0, 0.1);
   background-color: var(--header-main-color);
 }
-.close-btn:hover .close-btn__icon,
-.close-btn:focus .close-btn__icon {
-  fill: var(--accent-color);
+.close-btn__icon {
+  .close-btn:hover &,
+  .close-btn:focus & {
+    fill: var(--accent-color);
+  }
 }
 .mission {
   background-color: var(--header-main-color);
@@ -266,14 +261,15 @@ textarea:focus {
 .soc-list__link {
   background-color: var(--header-main-color);
   color: var(--main-sprite-color);
+
+  &:hover,
+  &:focus {
+    background-color: var(--accent-color);
+    color: var(--btn-accent-color);
+  }
 }
 .soc-list__icon {
   fill: currentColor;
-}
-.soc-list__link:hover,
-.soc-list__link:focus {
-  background-color: var(--accent-color);
-  color: var(--btn-accent-color);
 }
 .team__employee {
   font-weight: 500;
@@ -304,14 +300,15 @@ textarea:focus {
   border: 1px solid var(--main-sprite-color);
   background-color: var(--header-main-color);
   color: var(--main-sprite-color);
+
+  &:hover,
+  &:focus {
+    color: var(--accent-color);
+    border: 1px solid var(--accent-color);
+  }
 }
 .clients__icon {
   fill: currentColor;
-}
-.clients__link:hover,
-.clients__link:focus {
-  color: var(--accent-color);
-  border: 1px solid var(--accent-color);
 }
 .logo__footer {
   color: var(--btn-accent-color);
@@ -337,10 +334,11 @@ footer {
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
-}
-.contacts__mail:focus,
-.contacts__tel:focus {
-  color: var(--accent-color);
+
+  &:hover,
+  &:focus {
+    color: var(--accent-color);
+  }
 }
 .join__title {
   font-size: 14px;
@@ -351,14 +349,15 @@ footer {
 .join__link {
   background-color: rgba(255, 255, 255, 0.1);
   color: var(--btn-accent-color);
+
+  &:hover,
+  &:focus {
+    background-color: var(--accent-color);
+    color: var(--btn-accent-color);
+  }
 }
 .join__icon {
   fill: currentColor;
-}
-.join__link:hover,
-.join__link:focus {
-  background-color: var(--accent-color);
-  color: var(--btn-accent-color);
 }
 .subs-mail__tittle {
   font-size: 14px;
@@ -387,58 +386,81 @@ footer {
   background-color: var(--accent-color);
   color: var(--btn-accent-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-}
-.subs-mail__btn:hover,
-.subs-mail__btn:hover .send-icon {
-  color: var(--main-font-color);
-  background-color: var(--accent-color);
-}
-.subs-mail__btn:focus,
-.subs-mail__btn:focus .send-icon {
-  color: var(--main-font-color);
+
+  &:hover,
+  &:focus {
+    color: var(--main-font-color);
+  }
 }
 .subs-mail__icon {
   fill: currentColor;
+  .subs-mail__btn:hover & {
+    color: var(--main-font-color);
+    background-color: var(--accent-color);
+  }
+  .subs-mail__btn:focus & {
+    color: var(--main-font-color);
+  }
 }
-.main-section {
+.portfolio {
   background-color: var(--header-main-color);
 }
-.work-projects {
+.filter-list__btn {
+  background-color: var(--team-backgrd-color);
+  font-family: inherit;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.62;
+  letter-spacing: 0.03em;
+  color: #212121;
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition-property: background-color, color;
+
+  &:hover,
+  &:focus {
+    color: var(--btn-accent-color);
+    background-color: var(--accent-color);
+  }
+}
+.portfolio-list__projects {
   border-left: 1px solid var(--portfolio-border);
   border-right: 1px solid var(--portfolio-border);
   border-bottom: 1px solid var(--portfolio-border);
 }
-.portfolio-item {
+.portfolio-list__item {
   background-color: var(--header-main-color);
+
+  &:hover,
+  &:focus {
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+      1px 4px 6px rgba(0, 0, 0, 0.16);
+  }
 }
-.portfolio-item:hover,
-.portfolio-item:focus {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-    1px 4px 6px rgba(0, 0, 0, 0.16);
-}
-.portfolio-meta {
+.portfolio-list__meta {
   font-weight: 400;
   font-size: 18px;
   line-height: 1.6;
   letter-spacing: 0.03em;
   color: var(--btn-accent-color);
 }
-.portfolio-overlay {
+.portfolio-list__overlay {
   background-color: rgba(33, 150, 243, 0.9);
 }
-.work-projects {
+.portfolio-list__projects {
   border-left: 1px solid var(--portfolio-border);
   border-right: 1px solid var(--portfolio-border);
   border-bottom: 1px solid var(--portfolio-border);
 }
-.project {
+.portfolio-list__name {
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
   color: var(--main-font-color);
 }
-.worktitle {
+.portfolio-list__worktitle {
   font-weight: 400;
   font-size: 16px;
   line-height: 1.88;
